tests/ui/mismatched_types.stderr
error[E0308]: mismatched types
  --> $DIR/tests/ui/mismatched_types.rs:12:1
   |
12 | fn wrong_bench_fn<'a>(_: &'a mut ()) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected struct `Bencher`, found `()`
   |
   = note: expected fn pointer `for<'r> fn(&'r mut Bencher)`
              found fn pointer `for<'a> fn(&'a mut ())`

error[E0308]: mismatched types
 --> $DIR/tests/ui/mismatched_types.rs:9:19
  |
9 | static BENCH_WTF: usize = 999;
  |                   ^^^^^ expected fn pointer, found `usize`
  |
  = note: expected fn pointer `for<'r> fn(&'r mut Bencher)`
                   found type `usize`
